--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: architect
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+  - jekyll-remote-theme
 title: Zzzhty's homepage
 description: Bookmark this to keep an eye on my project updates!
